tests/error_display/hll_defer_reject_return.err.expected
error: at 8:13: [HTC-ControlFlowInDefer] In function 'f': return is not allowed inside defer
   |
 8 |     defer { return; };
   |             ^^^^^^
